--- a/install.txt
+++ b/install.txt
@@ -1,3 +1,9 @@
+=== Keyboard
+
+sudo localectl set-x11-keymap 'pl,ru' 'pc105' '' 'grp:alt_shift_toggle,grp_led:scroll,terminate:ctrl_alt_bksp'
+
+This will create /etc/X11/00-keyboard.conf
+
 77=== http://www.pavelkogan.com/ed2014/05/23/luks-full-disk-encryption/
 
 === cat /etc/vcomsole
